--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A small task management app built with React, Firebase Authentication, and Firestore. Users can sign up, log in, and perform CRUD on personal tasks.",
   "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
